--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:ui": "rm -rf build && npm run build && rm -rf ../backend/build && cp -r build ../backend/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
