--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=TEST node --test",
     "dev": "NODE_ENV=DEV nodemon index.js",
     "start": "node index.js"
   },
