--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 frontend/node_modules
+frontend/build
+backend/build
 backend/node_modules
 backend/database.sql
 backend/.env
 backend/build/*
+backend/build/*
+docker.env
